--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,37 +1,9 @@
 html,
+
 body,
+
 .app {
     height: 100vh;
-    background: #eee;
+    background: #eeeeee;
     padding: 1em;
-}
-
-.messages {
-    height: 440px;
-    overflow-y: scroll;
-}
-
-.message__form {
-    position: fixed !important;
-    bottom: 1em;
-    margin-left: 320px !important;
-    left: 0;
-    right: 1em;
-    z-index: 200;
-}
-
-.messages__self {
-    border-left: 2px solid orange;
-    padding-left: 8px;
-}
-
-.messages__image {
-    padding: 1em;
-}
-
-.progress__bar {
-    margin: 0.3em 0 0 0 !important;
-}
-.menu {
-    padding-bottom: 2em;
 }
